--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                     </div>
                     <div class="modal-body">
                         <div class="mb-3">
+                            <fieldset id="radioGroup" class="d-flex"></fieldset>
+                        </div>
+                        <div class="mb-3">
                             <label for="judul" class="form-label">Judul/Pertanyaan</label>
                             <input type="text" class="form-control" id="judul">
                         </div>
