filter per topik, createdAt, validasi

--- a/dashboard-ahli.html
+++ b/dashboard-ahli.html
@@ -19,14 +19,6 @@
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Features</a>
-                    <a class="nav-link" href="#">Pricing</a>
-                    <a class="nav-link disabled">Disabled</a>
-                </div>
-            </div>
         </div>
     </nav>
     <div class="container">
@@ -48,7 +40,7 @@
                 </div>
                 <div class="topics mb-4">
                     <h3 class="mb-3 fs-6">Topics</h3>
-                    <ul class="nav flex-column ms-4" id="topicList">
+                    <ul class="nav flex-column ms-4 links" id="topicList">
                     </ul>
                 </div>
             </div>
@@ -73,7 +65,7 @@
                     <div class="modal-header dropdown">
                         <i class="bi bi-globe me-1"></i>
                         <select class="form-select border-0" id="inputTopics">
-                            <option href="#" selected disabled> Setiap orang</option>
+                            <option href="#" selected> Setiap orang</option>
                         </select>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
