--- a/index.html
+++ b/index.html
@@ -178,6 +178,30 @@
 </div>
 <!-- end card -->
 
+<!-- start section 2 -->
+<div class="container-fluid mt-5 mb-5">
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-lg-6 mt-5">
+        <img src="assets/People-ava.svg" alt="avatar-profile" class="img-fluid">
+      </div>
+      <div class="col-lg-6 text-center">
+        <p class="fs-5 costume-p-text text-end">
+          Jadilah bagian dari SheTalk dan mulailah perjalanan kamu menuju pemahaman yang lebih baik tentang kesehatan reproduksi dan seksual.
+          <br><br>
+          Bergabunglah sekarang untuk mendiskusikan, belajar, dan berbagi pengalaman. Mari kita jaga kesehatan reproduksi dan seksual kita bersama-sama!
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  </div>
+</div>
+
+<!-- end section 2 -->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
