remove double id

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="modal-content">
                 <form id="buatDiskusiBaru">
                     <div class="modal-header dropdown">
-                        <h1 class="modal-title fs-5" id="diskusiBaru">Buat Diskusi Baru</h1>
+                        <h1 class="modal-title fs-5">Buat Diskusi Baru</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
