--- a/index.html
+++ b/index.html
@@ -202,6 +202,25 @@
 
 <!-- end section 2 -->
 
+
+<!-- start section 3 -->
+<div class="container-fluid">
+  <div class="container">
+    <div class="costume-bot-bg d-flex justify-content-center align-items-center position-relative rounded-4">
+      <div class="d-flex flex-column flex-sm-row justify-content-between align-items-center w-100 px-2 px-lg-5 ">
+        <h1 class="text-white mb-5 mb-lg-0 fs-4">Temukan Ruang Aman</h1>
+        <div class="text-center text-sm-left"> 
+          <a href="https://" class="text-decoration-none">
+            <button type="button" class="btn text-white me-lg-5 btn-lg btn-danger position-relative z-3">Gabung</button>
+          </a>
+        </div>
+        <img src="assets/Group 108.svg" alt="" class="position-absolute z-1 costume-img">
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- end section 3 -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
