--- a/index.html
+++ b/index.html
@@ -221,6 +221,31 @@
 </div>
 
 <!-- end section 3 -->
+
+
+<!-- footer -->
+
+<footer class="mt-5  text-center mb-3">
+  <div class=" d-lg-flex justify-content-lg-between mx-auto  ">
+    <img src="assets/SheTalk.svg" alt="Logo" width="auto" height="24" class="d-inline-block align-text-top px-lg-4">
+    <p class="costume-p">shetalksinfo@gmail.com</p>
+
+    <div>
+      <a href="tautan-email">
+        <img src="assets/fluent_mail-28-filled.svg" alt="email" srcset="">
+    </a>
+    
+    <a href="tautan-instagram">
+        <img src="assets/ri_instagram-fill.svg" alt="instagram" srcset="">
+    </a>
+    
+<div>
+    </div>
+    </div>
+</footer>
+
+<!-- end -->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
