--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <div class="dropdown d-flex align-items-center">
                             <i class="bi bi-globe me-1"></i>
                             <select class="form-select border-0" id="inputTopics">
-                                <option href="#" selected> Setiap orang</option>
+                                <option href="#" selected> Semua</option>
                             </select>
                         </div>
                         <div class="btns">
@@ -115,6 +115,9 @@
     </div>
 
     <script src="script.js"></script>
+    <script>
+        let currentPage = 'index';
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
     </script>
