--- a/login.html
+++ b/login.html
@@ -23,7 +23,47 @@
     </form>
   </div>
 
-    <script src="auth.js"></script>
+    <script>
+      //auth
+      const daftarAkunAhli = [
+          { 
+              username: 'ahli1', 
+              password: 'password1', 
+              tipe: 'profile', 
+              profile: { 
+                  username: '@wishdrboyke',
+                  nama: 'Dr Boyke', 
+                  bio: 'H. Boyke Dian Nugraha, SpOG MARS (Lahir di Bandung 14 Desember 1956) adalah Dokter Kesehatan Remaja, Keluarga & Seksolog Indonesia', 
+                  photo: 'profile.png', 
+              },
+          },
+      ];
+
+      document.getElementById('loginForm').addEventListener('submit', function (event) {
+          event.preventDefault();
+
+          const username = document.getElementById('username').value;
+          const password = document.getElementById('password').value;
+
+          // Periksa apakah akun terdaftar dan kredensial benar
+          const akunAhli = daftarAkunAhli.find(akun => akun.username === username && akun.password === password);
+
+          if (akunAhli) {
+              // Simpan status autentikasi di sesi lokal
+              localStorage.setItem('isAuthenticated', true);
+
+              // Simpan data profile di sesi lokal
+              localStorage.setItem('profileData', JSON.stringify(akunAhli.profile));
+
+              window.location.href = 'dashboard-ahli.html';
+
+              console.log('Login berhasil!');
+          } else {
+              alert('Login failed. Please check your username and password.');
+          }
+      });
+
+    </script>
     <!-- <script src="script.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
