--- a/login.html
+++ b/login.html
@@ -1,72 +1,167 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
     <title>SheTalk</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" />
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="login-container">
-    <form id="loginForm">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
+    />
+    <!-- Feather Icons-->
+    <script src="https://unpkg.com/feather-icons"></script>
 
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
+    <!--CSS-->
+    <style>
+      body {
+        background-image: url(./assets/images/form-login.svg);
+        background-size: cover;
+        background-repeat: repeat-y;
+        background-position: center;
+        overflow: hidden;
+      }
+      .row {
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
+      .card {
+        padding: 2rem;
+      }
+      .img-overlay {
+        margin-top: 3rem;
+      }
+      #loginForm {
+        padding: 2rem 0;
+      }
+      #loginForm img {
+        padding-bottom: 2rem;
+      }
+      #password {
+        margin-bottom: 2rem !important;
+      }
+    </style>
+  </head>
+  <body class="overflow-auto">
+    <div class="container px-md-0">
+      <div class="row justify-content-around">
+        <div class="col-md-6 col-lg-3">
+          <div>
+            <img
+              class="img-overlay"
+              src="./assets/images/woman.svg"
+              style="width: 20rem"
+            />
+          </div>
+        </div>
+        <div class="col-lg-3"></div>
+        <div class="col-md-6 col-lg-6">
+          <div class="card d-grid gap-2 d-md-flex justify-content-md-end">
+            <form id="loginForm">
+              <img
+                class="img-fluid"
+                style="max-width: 8rem"
+                src="./assets/images/SheTalk.svg"
+              />
+              <div class="form-group mt-3">
+                <input
+                  type="text"
+                  id="username"
+                  name="username"
+                  class="form-control"
+                  placeholder="Username"
+                  required=""
+                />
+              </div>
 
-      <button type="submit">Login</button>
-    </form>
-  </div>
+              <div class="input-group mt-3">
+                <input
+                  class="form-control"
+                  type="password"
+                  id="password"
+                  name="password"
+                  placeholder="Password"
+                  required=""
+                />
+              </div>
+
+              <button
+                id="login"
+                type="submit"
+                class="btn btn-info form-control mt-3"
+              >
+                Masuk
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bootstrap-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
 
     <script>
       //auth
       const daftarAkunAhli = [
-          { 
-              username: 'ahli1', 
-              password: 'password1', 
-              tipe: 'profile', 
-              profile: { 
-                  username: '@wishdrboyke',
-                  nama: 'Dr Boyke', 
-                  bio: 'H. Boyke Dian Nugraha, SpOG MARS (Lahir di Bandung 14 Desember 1956) adalah Dokter Kesehatan Remaja, Keluarga & Seksolog Indonesia', 
-                  photo: 'profile.png', 
-              },
+        {
+          username: "ahli1",
+          password: "password1",
+          tipe: "profile",
+          profile: {
+            username: "@wishdrboyke",
+            nama: "Dr Boyke",
+            bio: "H. Boyke Dian Nugraha, SpOG MARS (Lahir di Bandung 14 Desember 1956) adalah Dokter Kesehatan Remaja, Keluarga & Seksolog Indonesia",
+            photo: "profile.png",
           },
+        },
       ];
 
-      document.getElementById('loginForm').addEventListener('submit', function (event) {
+      document
+        .getElementById("loginForm")
+        .addEventListener("submit", function (event) {
           event.preventDefault();
 
-          const username = document.getElementById('username').value;
-          const password = document.getElementById('password').value;
+          const username = document.getElementById("username").value;
+          const password = document.getElementById("password").value;
 
           // Periksa apakah akun terdaftar dan kredensial benar
-          const akunAhli = daftarAkunAhli.find(akun => akun.username === username && akun.password === password);
+          const akunAhli = daftarAkunAhli.find(
+            (akun) => akun.username === username && akun.password === password
+          );
 
           if (akunAhli) {
-              // Simpan status autentikasi di sesi lokal
-              localStorage.setItem('isAuthenticated', true);
+            // Simpan status autentikasi di sesi lokal
+            localStorage.setItem("isAuthenticated", true);
 
-              // Simpan data profile di sesi lokal
-              localStorage.setItem('profileData', JSON.stringify(akunAhli.profile));
+            // Simpan data profile di sesi lokal
+            localStorage.setItem(
+              "profileData",
+              JSON.stringify(akunAhli.profile)
+            );
 
-              window.location.href = 'dashboard-ahli.html';
+            window.location.href = "dashboard-ahli.html";
 
-              console.log('Login berhasil!');
+            console.log("Login berhasil!");
           } else {
-              alert('Login failed. Please check your username and password.');
+            alert("Login failed. Please check your username and password.");
           }
-      });
-
+        });
     </script>
-    <!-- <script src="script.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-    </script>
-</body>
+  </body>
 </html>
