--- a/dashboard.html
+++ b/dashboard.html
@@ -116,7 +116,7 @@
 
     <script src="script.js"></script>
     <script>
-        let currentPage = 'index';
+        let currentPage = 'dashboard';
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
